package Lógica.Entidades;

public class ResumenReporte {

    private int cantidadPlanificada;
    private int cantidadRegistrada;
    private int cantidadActivos;
    private int cantidadRetirados;
    private boolean cumplePLanificacion;
    private String periodo;

    public ResumenReporte(){
    }


}
