package Lógica.Servicios;

import Lógica.Entidades.ReporteAyudantes;
import Lógica.Entidades.ResumenReporte;

public class EvaluadorCumplimientoAyudantia {

    public ResumenReporte evaluar(ReporteAyudantes reporte){

        return null;
    };
}
