package Lógica.Servicios;

import Lógica.Entidades.PeriodoAcademico;
import Lógica.Entidades.ReporteAyudantes;

public class GeneradorReportesPDF {

    public ReporteAyudantes generarReporteAyudantes(PeriodoAcademico periodo) {

        return null;
    }
}
