package Lógica.Servicios;

import Lógica.Entidades.PeriodoAcademico;

public class GestorNotificacionesEmail {

    public void programarRecordatorios(PeriodoAcademico periodo) {

    }
    public void notificarDirectoresPendientes() {

    }
    public void notificarCumplimientoTotal() {

    }
}
