@startuml
skinparam classAttributeIconSize 0

package "Dominio" {

  class Proyecto {
    -codigo : String
    -nombre : String
    -periodoInicio : String
    -duracionSemestres : int
    -estado : EstadoProyecto
    -numeroAyudantesPlanificados : int
    +cambiarEstado(nuevoEstado: EstadoProyecto) : void
    +esAprobado() : boolean
    +tieneAyudantesPlanificados() : boolean
  }

 enum EstadoProyecto {
    RECIBIDO
    EN_REVISION
    APROBADO
    NO_APROBADO
  }

 class Director {
    -identificacion : String
    -nombres : String
    -apellidos : String
    -correo : String
    +generarReporteAyudantes() : void
    +registrarReporte() : void
    +cerrarReporte() : void
  }

  class JefaturaDICC {
    -identificacion : String
    -nombres : String
    -correoInstitucional : String
    +registrarProyecto() : void
    +registrarPlanificacion() : void
    +actualizarEstadoProyecto() : void
    +consultarTrazabilidad() : void
  }

  class ReporteAyudantes {
    -id : String
    -periodoAcademico : String
    -estado : EstadoReporte
    -fechaCreacion : Date
    -fechaCierre : Date
    +agregarParticipacion() : boolean
    +cerrar() : boolean
    +estaCompleto() : boolean
  }

  enum EstadoReporte {
    SIN_REGISTRO
    EN_EDICION
    CERRADO
  }

  class Ayudante {
    -identificacion : String
    -nombres : String
    -apellidos : String
    -correoElectronico : String
    -carrera : String
    -semestre : int
  }

  class Ayudantia {
    -fechaInicio : Date
    -fechaFin : Date
    -fechaRetiro : Date
    -motivoRetiro : String
    -estado : EstadoParticipacion
    +esActivo() : boolean
    +registrarRetiro() : void
  }

  enum EstadoAyudantia {
    ACTIVO
    RETIRADO
    INACTIVO
  }

  class PeriodoAcademico {
    -codigo : String
    -nombre : String
    -fechaInicio : Date
    -fechaFin : Date
    -fechaLimiteRegistro : Date
    +esActivo() : boolean
    +diasRestantes() : int
  }

  class ResumenReporte {
    -cantidadPlanificada : int
    -cantidadRegistrada : int
    -cantidadActivos : int
    -cantidadRetirados : int
    -cumplePlanificacion : boolean
    -periodo : String
  }


  class Notificacion {
    -tipo : String
    -destinatario : String
    -fechaEnvio : Date
    -contenido : String
    -estado : String
    +notificar(): void
  }

  class AuditoriaReporte {
    -tipoOperacion : String
    -usuarioEjecutor : String
    -fechaHora : Date
    -descripcion : String
    -entidadAfectada : String
  }
}

package "Servicios de Dominio" {

  class EvaluadorCumplimientoAyudantia {
    +evaluar(reporte : ReporteAyudantes) : ResumenReporte
  }


  class GestorNotificacionesEmail {
    +programarRecordatorios(periodo : PeriodoAcademico) : void
    +notificarDirectoresPendientes() : void
    +notificarCumplimientoTotal() : void
  }


  class GeneradorReportesPDF {
    +generarReporteTrazabilidad(proyecto : Proyecto) : Reporte
    +generarReporteParticipacion(periodo : PeriodoAcademico) : Reporte
  }


}

' =====================
' RELACIONES DEL DOMINIO
' =====================

Proyecto "1" --> "1" Director : dirigidoPor
Proyecto "1" --> "0..*" ReporteAyudantes : tiene
Proyecto --> EstadoProyecto

ReporteAyudantes "1" *-- "1..*" Ayudantia : contiene
ReporteAyudantes "1" --> "1" PeriodoAcademico : correspondeA
ReporteAyudantes --> EstadoReporte

Ayudantia "1" --> "1" Ayudante : referencia
Ayudantia --> EstadoParticipacion
Ayudantia "1" --> "0..*" AuditoriaReporte : genera


Notificacion "0..*" --> "1" Director : notificaA
Notificacion "0..*" --> "1" JefaturaDICC : notificaA


JefaturaDICC "1" --> "0..*" PeriodoAcademico : configura

Director --> Ayudante : registra
Director --> Ayudantia : crea
Director --> ReporteAyudante : gestiona

JefaturaDICC --> Proyecto : registra

' =====================
' RELACIONES DE SERVICIOS
' =====================

EvaluadorCumplimientoAyudantia --> ReporteAyudante : evalúa
EvaluadorCumplimientoAyudantia --> ResumenReporte : genera

GestorNotificacionesEmail --> Notificacion : crea
GestorNotificacionesEmail --> Director : notifica
GestorNotificacionesEmail --> PeriodoAcademico : consulta

GeneradorReportesPDF --> Proyecto : consulta
GeneradorReportesPDF --> ReporteAyudante : consulta
GeneradorReportesPDF --> Ayudantia : consulta

@enduml
